# amzcrypto

./: .gitignore  CMakeLists.txt  makefile  readme.md  todo.md
demos/: chunkyint_diffie_hellman.cpp  chunkyint_rsa.cpp  sha1_collision_attack.cpp  sha1_length_extension_attack.cpp  sha1_preimage_attack.cpp
doc/: Doxyfile
include/: aes.hpp  aesbyte.hpp  aeslogger.hpp  chunkyint.hpp  sha1.hpp  sha1_util.hpp
src/: chunkyint.cpp
tests/: aes_appendix_c_test.cpp  aes_benchmark.cpp  aes_constexpr_test.cpp  chunkyint_benchmark.cpp  chunkyint_miller_rabin_test.cpp  chunkyint_mod_exp_test.cpp  chunkyint_test.cpp  sha1_benchmark.cpp  sha1_compiletime_test.cpp  sha1_smalltest.cpp
